# esp-idf-ppp-server

./: .gitignore  .gitmodules  README.md  esp-idf-ppp_server.patch  idf_component.yml  sdkconfig
.devcontainer/: Dockerfile
components/cli_client/: CMakeLists.txt  cli_client.c  cli_client.h
components/cli_server/: CMakeLists.txt  cli_common.c  cli_server.c  cli_server.h
components/cmd_iperf/: CMakeLists.txt  cmd_iperf.c  cmd_iperf.h
components/cmd_modbus_master/: CMakeLists.txt  modbus_master.c  modbus_master.h
components/cmd_modbus_slave/: CMakeLists.txt  modbus_slave.c  modbus_slave.h
components/cmd_ping/: CMakeLists.txt
components/esp_modem/include/: esp_modem_c_api_types.h
components/esp_modem/include/cxx_include/: esp_modem_dce.hpp  esp_modem_dce_factory.hpp  esp_modem_dce_module.hpp  esp_modem_netif.hpp
components/esp_modem/include/esp_private/: c_api_wrapper.hpp
components/esp_modem/src/: esp_modem_dce.cpp  esp_modem_modules.cpp  esp_modem_netif.cpp  esp_modem_term_uart.cpp  esp_modem_uart.cpp
components/iperf/: CMakeLists.txt  iperf.c
components/modbus_params/: CMakeLists.txt
components/modem/: CMakeLists.txt
components/modem/include/: nullmodem.h
components/modem/src/: esp_modem.c  nullmodem.c
components/ppp_link/: CMakeLists.txt  ppp_link.c  ppp_link.h
examples/ppp-server-example/components/cli_server/: CMakeLists.txt  cli_common.h
examples/ppp-server-example/main/: idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  ppp_server.c  ppp_server.h  ppp_server_main.c  pppos_client_main.c  pppos_server_main.c
(+6 files in other folders)
